# libmacho

./: .autotools  .cproject  autogen.sh  configure.ac  libmacho-1.0.pc  libmacho-1.0.pc.in
include/: Makefile.am
include/libmacho-1.0/: command.h  macho.h  section.h  segment.h  symtab.h
src/: Makefile.am  command.c  macho.c  section.c  segment.c  symbol.c  symtab.c
tools/: Makefile.am  dwarfman.c  machoman.c
